--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,54 @@
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Pixel";
+
+  font-display: swap;
+  src: url("../fonts/Pixel.woff2") format("woff2"),
+  url("../fonts/Pixel.woff") format("woff");
+}
+
 .page__body {
+  position: relative;
+
   margin: 0;
+
+  font-family: "Pixel", "Arial", sans-serif;
 
   background-color: #000000;
 }
+
+.page__score {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+
+  font-size: 20px;
+  color: #ffffff;
+}
+
+.page__play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  padding: 0;
+
+  font-size: 40px;
+  font-family: "Pixel", "Arial", sans-serif;
+  color: #ffffff;
+
+  background-color: transparent;
+  border: none;
+  outline: none;
+  transform: translateX(-50%);
+
+  transition: 0.5s;
+
+  user-select: none;
+}
+
+.page__play--hide {
+  display: none;
+}
+
