--- a/css/style.css
+++ b/css/style.css
@@ -27,28 +27,51 @@
   color: #ffffff;
 }
 
-.page__play {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
+.button {
   padding: 0;
 
-  font-size: 40px;
   font-family: "Pixel", "Arial", sans-serif;
   color: #ffffff;
 
   background-color: transparent;
   border: none;
   outline: none;
-  transform: translateX(-50%);
 
   transition: 0.5s;
 
   user-select: none;
 }
 
+.page__play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  font-size: 60px;
+  line-height: 0;
+
+  transform: translateX(-50%);
+}
+
+.page__pause,
+.page__resume {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  padding: 10px;
+
+  font-size: 40px;
+}
+
 .page__play--hide {
   display: none;
 }
 
+.page__resume--hide {
+  display: none;
+}
+
+.page__pause--hide {
+  display: none;
+}
