--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@
   font-family: "Pixel", "Arial", sans-serif;
 
   background-color: #000000;
+
+  user-select: none;
+
+  touch-action: none;
 }
 
 .page__score {
@@ -31,6 +35,10 @@
 
   font-size: 20px;
   color: #ffffff;
+
+  user-select: none;
+
+  touch-action: none;
 }
 
 .button {
@@ -40,14 +48,17 @@
   color: #ffffff;
 
   background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: center center;
   border: none;
   outline: none;
 
-  transition: 0.5s;
-
   user-select: none;
+
+  touch-action: none;
+}
+
+.button__img {
+  display: block;
+  padding: 7px 16px;
 }
 
 .page__play {
@@ -68,18 +79,7 @@
   top: 20px;
   right: 20px;
 
-  width: 50px;
-  height: 50px;
-
   font-size: 40px;
-}
-
-.page__pause {
-  background-image: url("../img/pause.png");
-}
-
-.page__resume {
-  background-image: url("../img/play.png");
 }
 
 .page__play--hide {
